--- a/PokedexWeb/PokedexWeb/Pages/Shared/_Layout.cshtml
+++ b/PokedexWeb/PokedexWeb/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,13 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
+@{
+    var username = HttpContextAccessor.HttpContext.Session.GetString("Username");
+    var id = HttpContextAccessor.HttpContext.Session.GetString("UserId");
+    var loggedIn = !string.IsNullOrEmpty(username);
+}
+
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -13,7 +22,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@200..800&family=Press+Start+2P&display=swap"
-          rel="stylesheet">
+    rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@800&family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -22,8 +31,8 @@
             <div class="container">
                 <a class="navbar-brand" id="title" asp-area="" asp-page="/Index"><img src="/img/logo.png" height="50"/></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-                        aria-label="Toggle navigation">
+                data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -40,31 +49,37 @@
                     </ul>
                     <div class="d-flex align-items-center">
                         <ul class="navbar-nav">
-                            <li class="nav-item my-2">
-                                <button class="button-blue me-2">
-                                    <a type="button" class="text-white nav-link" asp-area="" asp-page="/Views/Login">Login</a>
-                                </button>
-                            </li>
-                            <li class="nav-item my-2">
-                                <button class="button-red me-2">
-                                    <a type="button" class="text-white nav-link" asp-area="" asp-page="/Views/Registro">Registro</a>
-                                </button>
-                            </li>
-                            <li class="nav-item dropdown my-2">
-                                <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                    <img src="https://platform.polygon.com/wp-content/uploads/sites/2/chorus/uploads/chorus_asset/file/7025215/ash-pikachu.0.jpg?quality=90&strip=all&crop=21.888726207906,0,56.222547584187,100" 
-                                    alt="mdo" width="37" height="37" class="rounded-circle" id="profile-picture">
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-end text-small">
-                                    <li><a class="dropdown-item" href="/Views/Usuario/Equipo">Mis Pokemones</a></li>
-                                    <li><a class="dropdown-item" href="/Views/Usuario/Chat">Chats</a></li>
-                                    <li><a class="dropdown-item" href="#">Perfil</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">Salir</a></li>
-                                </ul>
-                            </li>
+                            @if (!loggedIn)
+                            {
+                                <li class="nav-item my-2">
+                                    <button class="button-blue me-2">
+                                        <a type="button" class="text-white nav-link" asp-area="" asp-page="/Views/Login">Login</a>
+                                    </button>
+                                </li>
+                                <li class="nav-item my-2">
+                                    <button class="button-red me-2">
+                                        <a type="button" class="text-white nav-link" asp-area="" asp-page="/Views/Registro">Registro</a>
+                                    </button>
+                                </li>
+                            }
+                            @if (loggedIn)
+                            {
+                                <li class="nav-item dropdown my-2">
+                                    <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                        <img src="https://platform.polygon.com/wp-content/uploads/sites/2/chorus/uploads/chorus_asset/file/7025215/ash-pikachu.0.jpg?quality=90&strip=all&crop=21.888726207906,0,56.222547584187,100" 
+                                        alt="mdo" width="37" height="37" class="rounded-circle" id="profile-picture">
+                                    </a>
+                                    <ul class="dropdown-menu dropdown-menu-end text-small">
+                                        <li><a class="dropdown-item" href="/Views/Usuario/Equipo?id=@id">Mis Pokemones</a></li>
+                                        <li><a class="dropdown-item" href="/Views/Usuario/Chat?id=@id">Chats</a></li>
+                                        <li><a class="dropdown-item" href="#">Perfil</a></li>
+                                        <li>
+                                            <hr class="dropdown-divider">
+                                        </li>
+                                        <li><a class="dropdown-item" href="#">Salir</a></li>
+                                    </ul>
+                                </li>
+                            }
                         </ul>
 
                     </div>
