--- a/PokedexWeb/PokedexWeb/Pages/Views/Login.cshtml
+++ b/PokedexWeb/PokedexWeb/Pages/Views/Login.cshtml
@@ -1,53 +1,50 @@
 ﻿@page
 @model PokedexWeb.Pages.Views.LoginModel
 @{
-    
+
     ViewData["Title"] = "Login";
 }
 
-    <div class="row justify-content-center mb-6">
-        <h1 class=" fw-bold text-center my-3">Iniciar Sesión</h1>
-        <div class="col-6 m-4">
-            <form class="needs-validation mb-6" method="post">
+<div class="row justify-content-center mb-6">
+    <h1 class=" fw-bold text-center my-3">Iniciar Sesión</h1>
+    <div class="col-6 m-4">
+        <form class="needs-validation mb-6" method="post">
 
-                <div class="mb-3">
-                    <label for="email" class="form-label">
-                        Email
-                        <span class="text-danger">*</span>
-                    </label>
-                    <input type="email" class="form-control" id="Correo" name="Correo" required>
-                    <div class="invalid-feedback">Por favor ingrese su correo</div>
+            <div class="mb-3">
+                <label for="email" class="form-label">
+                    Email
+                    <span class="text-danger">*</span>
+                </label>
+                <input type="email" class="form-control" id="username" name="username" required>
+                <div class="invalid-feedback">Por favor ingrese su correo</div>
+            </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">
+                    Contraseña
+                    <span class="text-danger">*</span>
+                </label>
+                <div class="password-field position-relative">
+                    <input type="password" class="form-control" id="password" name="password" required>
+                    <div class="invalid-feedback">Por favor ingrese su contraseña</div>
                 </div>
-                <div class="mb-3">
-                    <label for="password" class="form-label">
-                        Contraseña
-                        <span class="text-danger">*</span>
-                    </label>
-                    <div class="password-field position-relative">
-                        <input type="password" class="form-control" id="Password" name="Password" required>
-                        <div class="invalid-feedback">Por favor ingrese su contraseña</div>
-                    </div>
-                </div>
+            </div>
 
-                <div class=" mb-4 text-end">
-                    <span>
-                        <a href="/Usuarios/Restaurar" class="text-primary ">¿Olvidaste tu contraseña?</a>
-                    </span>
-                </div>
-                <div class="d-grid">
-                    <button class="button-blue py-2 mb-3">
-                        <a href="" type="submit" class="text-white text-decoration-none">Iniciar Sesion</a>
-                    </button>
-                </div>
-                <div class=" my-2 text-center">
-                    <span>
-                        ¿Aún no tienes una cuenta?
-                        <a href="/Usuarios/Registro" class="text-primary ">Regístrate</a>
-                    </span>
-                </div>
-
-                
-
-            </form>
-        </div>
+            <div class=" mb-4 text-end">
+                <span>
+                    <a href="/Usuarios/Restaurar" class="text-primary ">¿Olvidaste tu contraseña?</a>
+                </span>
+            </div>
+            <div class="d-grid">
+                <button class="button-blue py-2 mb-3 text-white">
+                    Iniciar Sesion
+                </button>
+            </div>
+            <div class=" my-2 text-center">
+                <span>
+                    ¿Aún no tienes una cuenta?
+                    <a href="/Usuarios/Registro" class="text-primary ">Regístrate</a>
+                </span>
+            </div>
+        </form>
     </div>
+</div>
