--- a/PokedexWeb/PokedexWeb/Pages/Views/Batalla/Batalla.cshtml
+++ b/PokedexWeb/PokedexWeb/Pages/Views/Batalla/Batalla.cshtml
@@ -6,7 +6,7 @@
 
 <h1 class="text-center my-3">Batallas Pokémon</h1>
 <div class="mx-5">
-    
+
     <div class="row  d-flex justify-content-center">
         <div class="md-auto col-10 text-center">
             <div class="d-flex justify-content-end">
@@ -20,52 +20,49 @@
                         <tr>
                             <th>Retador</th>
                             <th>Contrincante</th>
-                            <th>Fecha</th>
                             <th>Lugar</th>
+                            <th>Fecha</th>
                             <th>Acciones</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>
-                                May
-                                <span class="badge-circle won"></span>
-                            </td>
-                            <td>
-                                Drew
-                                <span class="badge-circle lost"></span>
-                            </td>
-                            <td>Kento Festival</td>
-                            <td>12/04/2024</td>
-                            <td>
-                                <button class="button icon">
-                                    <a href="/Views/Pokemon/Editar" type="button" class="text-white text-decoration-none" title="Modificar Pokemon"><i class="fa-solid fa-pen"></i></a>
-                                </button>
-                                <button class="button icon">
-                                    <a href="/Views/Pokemon/Eliminar" type="button" class="text-white text-decoration-none" title="Eliminar Pokemon"><i class="fa-solid fa-trash"></i></a>
-                                </button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                May
-                                <span class="badge-circle won"></span>
-                            </td>
-                            <td>
-                                Drew
-                                <span class="badge-circle lost"></span>
-                            </td>
-                            <td>Kento Festival</td>
-                            <td>12/04/2024</td>
-                            <td>
-                                <button class="button icon">
-                                    <a href="/Views/Pokemon/Editar" type="button" class="text-white text-decoration-none" title="Modificar Pokemon"><i class="fa-solid fa-pen"></i></a>
-                                </button>
-                                <button class="button icon">
-                                    <a href="/Views/Pokemon/Eliminar" type="button" class="text-white text-decoration-none" title="Eliminar Pokemon"><i class="fa-solid fa-trash"></i></a>
-                                </button>
-                            </td>
-                        </tr>
+                        @foreach (var reto in Model.Retos)
+                        {
+                            <tr>
+                                <td>
+                                    @reto.Retador.nombre
+                                    @if (reto.ganador != null && reto.ganador == "Retador")
+                                    {
+                                        <span class="badge-circle won"></span>
+                                    }
+                                    @if (reto.ganador != null && reto.ganador == "Contendiente")
+                                    {
+                                        <span class="badge-circle lost"></span>
+                                    }
+                                </td>
+                                <td>
+                                    @reto.Contendiente.nombre
+                                    @if (reto.ganador != null && reto.ganador == "Contendiente")
+                                    {
+                                        <span class="badge-circle won"></span>
+                                    }
+                                    @if (reto.ganador != null && reto.ganador == "Retador")
+                                    {
+                                        <span class="badge-circle lost"></span>
+                                    }
+                                </td>
+                                <td>@reto.lugar</td>
+                                <td>@reto.fecha</td>
+                                <td>
+                                    <button class="button icon">
+                                        <a href="/Views/Pokemon/Editar" type="button" class="text-white text-decoration-none" title="Modificar Pokemon"><i class="fa-solid fa-pen"></i></a>
+                                    </button>
+                                    <button class="button icon">
+                                        <a href="/Views/Pokemon/Eliminar" type="button" class="text-white text-decoration-none" title="Eliminar Pokemon"><i class="fa-solid fa-trash"></i></a>
+                                    </button>
+                                </td>
+                            </tr>
+                        }
                     </tbody>
                 </table>
             </div>
