--- a/PokedexWeb/PokedexWeb/Pages/Shared/_Layout.cshtml
+++ b/PokedexWeb/PokedexWeb/Pages/Shared/_Layout.cshtml
@@ -48,6 +48,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Views/Batalla/Batalla">Batallas</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Views/Usuario/AdminUsers">Usuarios</a>
+                            </li>
                         }
                     </ul>
                     <div class="d-flex align-items-center">
