--- a/PokedexWeb/PokedexWeb/Pages/Views/Usuario/Equipo.cshtml
+++ b/PokedexWeb/PokedexWeb/Pages/Views/Usuario/Equipo.cshtml
@@ -7,7 +7,14 @@
 
 <h1 class="text-center mt-3 mb-4">Mis Pokémon</h1>
 <div class="row">
+    
     <div class="md-auto">
+        <div class="d-flex justify-content-end">
+            <button class="button-blue py-2 mb-3">
+                <a href="/Views/Usuario/Agregar" type="button" class="text-white text-decoration-none">Agregar Pokémon</a>
+            </button>
+        </div>
+        
         <div class="table-responsive mx-5">
             <table class="table-style align-middle">
                 <thead>
