--- a/PokedexWeb/PokedexWeb/Pages/Views/Usuario/Agregar.cshtml
+++ b/PokedexWeb/PokedexWeb/Pages/Views/Usuario/Agregar.cshtml
@@ -8,7 +8,7 @@
     <div class="row  d-flex justify-content-center">
         <form class="mt-4 col-10" method="post">
             <div class="mb-3">
-                <input type="number" class="form-control" id="id_pokemon" name="id_pokemon" required readonly hidden>
+                <input type="number" class="form-control" id="id" name="id" required readonly hidden>
             </div>
             <select class="form-select mb-3">
                 <option selected>Pokémon</option>
