--- a/PokedexWeb/PokedexWeb/Pages/Views/Usuario/Editar.cshtml
+++ b/PokedexWeb/PokedexWeb/Pages/Views/Usuario/Editar.cshtml
@@ -7,20 +7,25 @@
 <div class="mx-5">
 
     <div class="row  d-flex justify-content-center">
+
+
         <form class="mt-4 col-10 form-inline" method="post">
+
+            <input type="hidden" id="id_usuario" name="id_usuario" value="@Model.Usuario.id_usuario">
+
             <div class="mb-3">
-                @* <input type="number" class="form-control" id="id_usuario" name="id_usuario" required readonly hidden value="@Model.Usuario.nombre"> *@
+                <input type="number" class="form-control" id="id_usuario" name="id_usuario" required readonly hidden value="@Model.Usuario.nombre">
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                <label class="form-check-label" for="defaultCheck1">
-                    Enfermero
+                <input class="form-check-input" type="checkbox" id="adminCheck" name="Admin" value="true">
+                <label class="form-check-label" for="adminCheck">
+                    Administrador
                 </label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                <label class="form-check-label" for="defaultCheck1">
-                    Administrador
+                <input class="form-check-input" type="checkbox" id="enfermeroCheck" name="Enfermero" value="true">
+                <label class="form-check-label" for="enfermeroCheck">
+                    Enfermero
                 </label>
             </div>
             <div class="d-flex justify-content-end">
